--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Poe, Edgar Allan, 1809-1849'
 - !lcc 'PS'
+- GITenberg
 title: 'The Dreamer: A Romantic Rendering of the Life-Story of Edgar Allan Poe'
 url: http://www.gutenberg.org/ebooks/17389
